--- a/mvc-practice/build.gradle
+++ b/mvc-practice/build.gradle
@@ -4,10 +4,11 @@ plugins {
     id 'war'
     id 'eclipse'
     id 'org.gretty' version '2.2.0' 
+    id "com.palantir.git-version" version "0.12.0-rc2"
 }
 
 group = 'com.mvc-practice'
-version = '0.0.1-SNAPSHOT'
+//version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 dependencies {
@@ -16,10 +17,15 @@ dependencies {
     providedCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
 	providedCompile 'javax:javaee-api:7.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
 }
 
 repositories {
     jcenter()
 	mavenCentral()
+}
+
+gretty {
+  contextPath = '/'
 }
