--- a/mvc-practice/build.gradle
+++ b/mvc-practice/build.gradle
@@ -10,6 +10,7 @@ plugins {
 group = 'com.mvc-practice'
 //version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+version=gitVersion()
 
 dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
