--- a/mvc-practice/src/main/webapp/WEB-INF/web.xml
+++ b/mvc-practice/src/main/webapp/WEB-INF/web.xml
@@ -17,6 +17,6 @@
   
   <servlet-mapping>
     <servlet-name>login</servlet-name>
-    <url-pattern>/ControllerServlet</url-pattern>
+    <url-pattern>/login</url-pattern>
   </servlet-mapping>
 </web-app>
